--- a/.editorconfig
+++ b/.editorconfig
@@ -4,3 +4,6 @@
 dotnet_diagnostic.CA1712.severity = none
 
 vc_generate_documentation_comments = xml
+
+# IDE0055: Fix formatting
+dotnet_diagnostic.IDE0055.severity = none
