--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,6 @@ vc_generate_documentation_comments = xml
 
 # IDE0055: Fix formatting
 dotnet_diagnostic.IDE0055.severity = none
+
+# IDE0052: Remove unread private members
+dotnet_diagnostic.IDE0052.severity = suggestion
