--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Dirkster.MLib" Version="1.3.1.2" />
     <PackageReference Include="FastMember" Version="1.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Orc.Theming" Version="4.1.2" />
     <PackageReference Include="Pfim" Version="0.9.1" />
     <PackageReference Include="protobuf-net" Version="3.0.62" />
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
@@ -37,15 +38,6 @@
     <ProjectReference Include="..\WolvenKit.W3Speech\WolvenKit.W3Speech.csproj" />
     <ProjectReference Include="..\WolvenKit.W3Strings\WolvenKit.W3Strings.csproj" />
     <ProjectReference Include="..\WolvenKit.Wwise\WolvenKit.Wwise.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Settings">
-      <HintPath>..\..\..\AvalonDock\source\MLibTest\MLibTest_Components\Settings\Settings\bin\Debug\Settings.dll</HintPath>
-    </Reference>
-    <Reference Include="SettingsModel">
-      <HintPath>..\..\..\AvalonDock\source\MLibTest\MLibTest_Components\Settings\Settings\bin\Debug\SettingsModel.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
