--- a/WolvenKitUI/WolvenKitUI.csproj
+++ b/WolvenKitUI/WolvenKitUI.csproj
@@ -26,19 +26,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Catel.Core" Version="5.11.2" />
-    <PackageReference Include="Catel.MVVM" Version="5.11.2" />
-    <PackageReference Include="Catel.Fody" Version="4.1.0" PrivateAssets="all" />
+    <PackageReference Include="Catel.Core" Version="5.12.11" />
+    <PackageReference Include="Catel.MVVM" Version="5.12.11" />
+    <PackageReference Include="Catel.Fody" Version="4.5.0" PrivateAssets="all" />
     <PackageReference Include="Dirkster.AvalonDock" Version="4.50.0" />
     <PackageReference Include="Dirkster.AvalonDock.Themes.VS2013" Version="4.50.0" />
     <PackageReference Include="Dirkster.MLib" Version="1.3.1.2" />
     <PackageReference Include="Dirkster.MWindowLib" Version="1.3.1.2" />
-    <PackageReference Include="Fody" Version="5.1.1" PrivateAssets="all" />
-    <PackageReference Include="ModuleInit.Fody" Version="2.0.0" PrivateAssets="all" />
-    <PackageReference Include="Obsolete.Fody" Version="5.0.0" PrivateAssets="all" />
-    <PackageReference Include="Orchestra.Shell.Ribbon.Fluent" Version="5.3.0-alpha0296" />
+    <PackageReference Include="Fody" Version="6.3.0" PrivateAssets="all" />
+    <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
+    <PackageReference Include="Obsolete.Fody" Version="5.2.1" PrivateAssets="all" />
+    <PackageReference Include="Orchestra.Shell.Ribbon.Fluent" Version="6.1.1" />
     <PackageReference Include="SharpVectors.Reloaded" Version="1.6.0" />
-    <PackageReference Include="WpfAnalyzers" Version="2.2.0.2" PrivateAssets="all">
+    <PackageReference Include="System.Security.Permissions" Version="5.0.0" />
+    <PackageReference Include="WpfAnalyzers" Version="3.5.2" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
@@ -219,14 +220,6 @@
   <ItemGroup>
     <ProjectReference Include="..\WolvenKit.App\WolvenKit.App.csproj" />
     <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Settings">
-      <HintPath>..\..\..\AvalonDock\source\MLibTest\MLibTest_Components\Settings\Settings\bin\Debug\Settings.dll</HintPath>
-    </Reference>
-    <Reference Include="SettingsModel">
-      <HintPath>..\..\..\AvalonDock\source\MLibTest\MLibTest_Components\Settings\Settings\bin\Debug\SettingsModel.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Icons\MoveToSubmodule_16x.svg" />
