--- a/WolvenKitUI/Resources/AvalonDock.Layout.config
+++ b/WolvenKitUI/Resources/AvalonDock.Layout.config
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LayoutRoot>
-  <RootPanel Orientation="Vertical">
-    <LayoutPanel Orientation="Horizontal">
-      <LayoutAnchorablePane Id="cb27961f-0347-4f4d-9ce9-badcc19b486d" DockWidth="383" DockMinWidth="375" FloatingWidth="385" FloatingHeight="583" FloatingLeft="190" FloatingTop="593">
-        <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Tool 1" IsSelected="True" ContentId="Tool1_Tool" FloatingLeft="190" FloatingTop="593" FloatingWidth="385" FloatingHeight="583" LastActivationTimeStamp="11/27/2020 18:11:32" />
-      </LayoutAnchorablePane>
-      <LayoutDocumentPane />
-    </LayoutPanel>
-    <LayoutAnchorablePaneGroup Orientation="Horizontal" DockHeight="286.5" FloatingWidth="385" FloatingHeight="583" FloatingLeft="887" FloatingTop="842">
-      <LayoutAnchorablePane DockHeight="286.5" DockMinWidth="375" FloatingWidth="385" FloatingHeight="583" FloatingLeft="887" FloatingTop="842">
-        <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="File Stats" IsSelected="True" ContentId="FileStatsTool" FloatingLeft="887" FloatingTop="842" FloatingWidth="385" FloatingHeight="583" LastActivationTimeStamp="11/27/2020 18:11:33" PreviousContainerId="cb27961f-0347-4f4d-9ce9-badcc19b486d" PreviousContainerIndex="1" />
-      </LayoutAnchorablePane>
-    </LayoutAnchorablePaneGroup>
-  </RootPanel>
-  <TopSide />
-  <RightSide />
-  <LeftSide />
-  <BottomSide />
-  <FloatingWindows />
-  <Hidden />
+	<RootPanel Orientation="Horizontal">
+		<LayoutDocumentPane />
+		<LayoutAnchorablePane Id="1111c3c9-a70c-4ba5-8a5c-b064d43ef6e7" Name="ToolsPane" DockWidth="375" DockMinWidth="375" />
+	</RootPanel>
+	<TopSide />
+	<RightSide />
+	<LeftSide />
+	<BottomSide />
+	<FloatingWindows />
+	<Hidden>
+		<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="File Stats" ContentId="FileStatsTool" CanClose="False" PreviousContainerId="1111c3c9-a70c-4ba5-8a5c-b064d43ef6e7" PreviousContainerIndex="0" />
+		<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Color Picker" ContentId="ColorPickerTool" CanClose="False" PreviousContainerId="1111c3c9-a70c-4ba5-8a5c-b064d43ef6e7" PreviousContainerIndex="0" />
+		<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Tool 1" ContentId="Tool1_Tool" CanClose="False" PreviousContainerId="1111c3c9-a70c-4ba5-8a5c-b064d43ef6e7" PreviousContainerIndex="0" />
+		<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Tool 2" ContentId="Tool2_Tool" CanClose="False" PreviousContainerId="1111c3c9-a70c-4ba5-8a5c-b064d43ef6e7" PreviousContainerIndex="0" />
+		<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Tool 3" ContentId="Tool3_Tool" CanClose="False" PreviousContainerId="1111c3c9-a70c-4ba5-8a5c-b064d43ef6e7" PreviousContainerIndex="0" />
+	</Hidden>
 </LayoutRoot>
