--- a/WolvenKitUI/WolvenKitUI.csproj
+++ b/WolvenKitUI/WolvenKitUI.csproj
@@ -214,7 +214,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\AvalonDock.Layout.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Resource Include="Resources\Icons\Close_16x.svg" />
     <Resource Include="Resources\Icons\EventLog_16x.svg" />
