--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AltoControls" version="1.0.1" targetFramework="net461" />
+  <package id="AssimpNet" version="4.1.0" targetFramework="net48" />
   <package id="AutoCompleteMenu-ScintillaNET" version="1.6.2" targetFramework="net48" />
   <package id="Autoupdater.NET.Official" version="1.6.4" targetFramework="net48" />
   <package id="Catel.Core" version="5.12.8" targetFramework="net48" />
