--- a/WolvenKitUI/WolvenKitUI.csproj
+++ b/WolvenKitUI/WolvenKitUI.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras/2.0.54">
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net48</TargetFrameworks>
+    <TargetFrameworks>net5.0-windows;netcoreapp3.1</TargetFrameworks>
     <AssemblyName>WolvenKitUI</AssemblyName>
     <RootNamespace>WolvenKitUI</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
     <UseWpf>true</UseWpf>
-    <UseWindowsForms>true</UseWindowsForms>
+    
     <ExtrasEnableImplicitWpfReferences>true</ExtrasEnableImplicitWpfReferences>
     <ExtrasEnableImplicitWinFormsReferences>true</ExtrasEnableImplicitWinFormsReferences>
   </PropertyGroup>
@@ -36,8 +36,11 @@
     <PackageReference Include="Fody" Version="6.3.0" PrivateAssets="all" />
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
     <PackageReference Include="Obsolete.Fody" Version="5.2.1" PrivateAssets="all" />
+    <PackageReference Include="Orc.ProjectManagement" Version="4.0.2" />
+    <PackageReference Include="Orc.Squirrel" Version="4.0.4" />
+    <PackageReference Include="Orc.Squirrel.Xaml" Version="4.0.4" />
     <PackageReference Include="Orchestra.Shell.Ribbon.Fluent" Version="6.1.1" />
-    <PackageReference Include="SharpVectors.Reloaded" Version="1.6.0" />
+    <PackageReference Include="SharpVectors.Reloaded" Version="1.7.1" />
     <PackageReference Include="System.Security.Permissions" Version="5.0.0" />
     <PackageReference Include="WpfAnalyzers" Version="3.5.2" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -51,144 +54,7 @@
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props')" />
   
   <!-- Fallback code in case repository template is not found, code below can be removed when the repository template files are used -->
-  <Choose>
-    <When Condition="!Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props')">
-        <PropertyGroup>
-          <NoWarn>$(NoWarn);CS1591;CS1998;NU1603;NU1605;NU1608;NU1701;AD0001</NoWarn>
-          <NoError>$(NoError);CS1591;CS1998;NU1603;NU1605;NU1608;NU1701;AD0001</NoError>
-          <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-          <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-          <AppendTargetFrameworkToOutputPath>true</AppendTargetFrameworkToOutputPath>
-          <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-          <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-          <Configuration Condition="'$(Configuration)' == ''">Release</Configuration>
-          <PackageOutputPath>$(ProjectDir)..\output\$(Configuration)\</PackageOutputPath>
-          <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb;.xml</AllowedOutputExtensionsInPackageBuildOutputFolder>
-          <Deterministic>False</Deterministic>
-          <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-        </PropertyGroup>
-        
-        <!-- Explicit additional project properties that require stuff set before -->
-        <PropertyGroup>
-          <!-- 
-            Use MsBuildProjectName, this allows us to use the same assembly name for different
-            versions, e.g.:
-            
-            Orc.EntityFramework5 => Orc.EntityFramework.dll
-            Orc.EntityFramework6 => Orc.EntityFramework.dll
-            
-            If we would use AssemblyName, they would be compiled into the same directory
-          -->
-          <OverridableOutputPath>$(ProjectDir)..\output\$(Configuration)\$(MSBuildProjectName)\</OverridableOutputPath>
-          <OutputPath>$(OverridableOutputPath)</OutputPath>
-          <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
-        </PropertyGroup>
-        
-        <!-- CSharp language -->
-        <PropertyGroup>
-          <LangVersion>7.3</LangVersion>
-        </PropertyGroup>
-
-        <!-- Enforce portable pdb format -->
-        <PropertyGroup Condition="'$(Configuration)'=='Release'">
-          <DebugType>portable</DebugType>
-          <!-- Debug symbols are required for ApiApprover -->
-          <DebugSymbols>true</DebugSymbols>
-        </PropertyGroup>
-
-        <PropertyGroup Condition="'$(Configuration)'=='Debug'">
-          <DebugType>full</DebugType>
-          <DebugSymbols>true</DebugSymbols>
-        </PropertyGroup>
-
-        <ItemGroup>
-          <Compile Include="..\*.cs">
-            <SonarQubeExclude>true</SonarQubeExclude>
-          </Compile>
-        </ItemGroup>
-        
-        <!-- Platform specific stuff -->
-        <ItemGroup>
-          <Compile Remove="Platforms\**\*.cs;Resources\**\*.cs" />
-          <Page Remove="Platforms\**\*.xaml" />
-          <!-- This is here so that the conditionally included files below are all visible in VS -->
-          <None Include="Platforms\**\*.*" />
-          <None Include="Resources\**\*.*" Exclude="Resources\**\*.xaml" />
-          <EmbeddedResource Include="Resources\Files\**\*.*" />
-          <Resource Include="Resources\Fonts\**\*.ttf" />
-          <Resource Include="Resources\Images\**\*.png" />
-          <Resource Include="Resources\Images\**\*.gif" />
-          <Resource Include="Resources\Images\**\*.jpg" />
-          <Resource Include="Resources\Images\**\*.jpeg" />
-          <EmbeddedResource Include="Resources\ThirdPartyNotices\**\*" />
-        </ItemGroup>
-        
-        <ItemGroup>
-          <EmbeddedResource Update="Properties\Resources.*.resx">
-            <Generator />
-          </EmbeddedResource>
-        
-          <EmbeddedResource Update="Properties\Resources.resx">
-            <Generator>ResXFileCodeGenerator</Generator>
-            <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-          </EmbeddedResource>
-        
-          <Compile Update="Properties\Resources.Designer.cs">
-            <DesignTime>True</DesignTime>
-            <AutoGen>True</AutoGen>
-            <DependentUpon>Resources.resx</DependentUpon>
-          </Compile>
-        </ItemGroup>
-        
-        <!-- .NET Core app 3.0 -->
-        <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
-          <DefineConstants>$(DefineConstants);NETCORE;NETCORE3_0;NETCOREAPP;NETCOREAPP3_0</DefineConstants>
-        </PropertyGroup>
-        
-        <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
-          <None Remove="Platforms\net\**\*.cs;Platforms\net\**\*.xaml;Platforms\net\**\*.xaml.cs" />
-          <Compile Include="Platforms\net\**\*.cs" DependentUpon="%(Filename)" />
-          <Page Include="Platforms\net\**\*.xaml" SubType="Designer" Generator="MSBuild:Compile" />
-          <Compile Update="Platforms\net\**\*.xaml.cs" SubType="Code" DependentUpon="%(Filename)" />
-        </ItemGroup>
-        
-        <!-- .NET 4.6 -->
-        <PropertyGroup Condition=" '$(TargetFramework)' == 'net46' ">
-          <EnableWpfProjectSetup>true</EnableWpfProjectSetup>   
-          <DefineConstants>$(DefineConstants);NET;NET46;NET460</DefineConstants>
-        </PropertyGroup>
-        
-        <PropertyGroup Condition=" '$(TargetFramework)' == 'net461' ">
-          <EnableWpfProjectSetup>true</EnableWpfProjectSetup>   
-          <DefineConstants>$(DefineConstants);NET;NET46;NET461</DefineConstants>
-        </PropertyGroup>
-        
-        <PropertyGroup Condition=" '$(TargetFramework)' == 'net462' ">
-          <EnableWpfProjectSetup>true</EnableWpfProjectSetup>
-          <DefineConstants>$(DefineConstants);NET;NET46;NET462</DefineConstants>
-        </PropertyGroup>
-        
-        <ItemGroup Condition=" '$(TargetFramework)' == 'net46' OR '$(TargetFramework)' == 'net461' OR '$(TargetFramework)' == 'net462'">
-          <None Remove="Platforms\net\**\*.cs;Platforms\net\**\*.xaml;Platforms\net\**\*.xaml.cs" />
-          <Compile Include="Platforms\net\**\*.cs" DependentUpon="%(Filename)" />
-          <Page Include="Platforms\net\**\*.xaml" SubType="Designer" Generator="MSBuild:Compile" />
-          <Compile Update="Platforms\net\**\*.xaml.cs" SubType="Code" DependentUpon="%(Filename)" />
-        </ItemGroup>
-        
-        <!-- .NET 4.7 -->
-        <PropertyGroup Condition=" '$(TargetFramework)' == 'net47' ">
-          <EnableWpfProjectSetup>true</EnableWpfProjectSetup>
-          <DefineConstants>$(DefineConstants);NET;NET47;NET470</DefineConstants>
-        </PropertyGroup>
-        
-        <ItemGroup Condition=" '$(TargetFramework)' == 'net47' ">
-          <None Remove="Platforms\net\**\*.cs;Platforms\net\**\*.xaml;Platforms\net\**\*.xaml.cs" />
-          <Compile Include="Platforms\net\**\*.cs" DependentUpon="%(Filename)" />
-          <Page Include="Platforms\net\**\*.xaml" SubType="Designer" Generator="MSBuild:Compile" />
-          <Compile Update="Platforms\net\**\*.xaml.cs" SubType="Code" DependentUpon="%(Filename)" />
-        </ItemGroup>
-    </When>
-  </Choose>
+  
   <ItemGroup>
     <None Remove="Resources\Icons\Close_16x.svg" />
     <None Remove="Resources\Icons\EventLog_16x.svg" />
@@ -240,5 +106,18 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 </Project>
